--- a/PS2403L/Debug/makefile
+++ b/PS2403L/Debug/makefile
@@ -28,6 +28,11 @@ endif
 
 -include ../makefile.defs
 
+BUILD_ARTIFACT_NAME := PS2403L
+BUILD_ARTIFACT_EXTENSION := elf
+BUILD_ARTIFACT_PREFIX := 
+BUILD_ARTIFACT := $(BUILD_ARTIFACT_PREFIX)$(BUILD_ARTIFACT_NAME).$(BUILD_ARTIFACT_EXTENSION)
+
 # Add inputs and outputs from these tool invocations to the build variables 
 EXECUTABLES += \
 PS2403L.elf \
@@ -46,7 +51,10 @@ PS2403L.bin \
 
 
 # All Target
-all: PS2403L.elf secondary-outputs
+all: main-build
+
+# Main-build Target
+main-build: PS2403L.elf secondary-outputs
 
 # Tool invocations
 PS2403L.elf: $(OBJS) $(USER_OBJS) C:\Users\Vasyl\Documents\GitHub\PowerSupply-BatteryCheking-PS2403L-\PS2403L\STM32F100C8TX_FLASH.ld
@@ -81,7 +89,14 @@ clean:
 
 secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST) $(OBJCOPY_HEX) $(OBJCOPY_BIN)
 
-.PHONY: all clean dependents
+fail-specified-linker-script-missing:
+	@echo 'Error: Cannot find the specified linker script. Check the linker settings in the build configuration.'
+	@exit 2
+
+warn-no-linker-script-specified:
+	@echo 'Warning: No linker script specified. Check the linker settings in the build configuration.'
+
+.PHONY: all clean dependents fail-specified-linker-script-missing warn-no-linker-script-specified
 .SECONDARY:
 
 -include ../makefile.targets
